kubernetes/registration-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-deployment
spec:
  selector:
    matchLabels:
      app: registration-service
  replicas: 1
  template:
    metadata:
      labels:
        app: registration-service
    spec:
      containers:
        - name: registration-service
          image: registration-service:1.0
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST
              value: mysql
              
            - name: DB_NAME  # Setting Database name from configMap
              value: school_db

            - name: DB_USER
              value: root

            - name: DB_PASSWORD
              value: root
            
            - name: DB_PORT
              value: "3306"
